parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: ε
    3               | statement_list statement

    4 statement: variable_declaration
    5          | assignment_statement
    6          | if_statement
    7          | while_statement
    8          | print_statement
    9          | read_statement
   10          | block
   11          | T_SEMICOLON
   12          | T_ERROR T_SEMICOLON

   13 block: T_LBRACE statement_list T_RBRACE

   14 type_specifier: T_INT
   15               | T_FLOAT
   16               | T_STRING_TYPE

   17 variable_declaration: type_specifier identifier T_SEMICOLON
   18                     | type_specifier identifier T_ASSIGN expression T_SEMICOLON

   19 assignment_statement: identifier T_ASSIGN expression T_SEMICOLON

   20 if_statement: T_IF T_LPAREN expression T_RPAREN block
   21             | T_IF T_LPAREN expression T_RPAREN block T_ELSE block

   22 while_statement: T_WHILE T_LPAREN expression T_RPAREN block

   23 print_statement: T_PRINT T_LPAREN expression T_RPAREN T_SEMICOLON

   24 read_statement: T_READ T_LPAREN identifier T_RPAREN T_SEMICOLON

   25 expression: comparison_expression

   26 comparison_expression: arithmetic_expression
   27                      | arithmetic_expression T_EQ arithmetic_expression
   28                      | arithmetic_expression T_NEQ arithmetic_expression
   29                      | arithmetic_expression T_LT arithmetic_expression
   30                      | arithmetic_expression T_GT arithmetic_expression
   31                      | arithmetic_expression T_LTE arithmetic_expression
   32                      | arithmetic_expression T_GTE arithmetic_expression

   33 arithmetic_expression: term
   34                      | arithmetic_expression T_PLUS term
   35                      | arithmetic_expression T_MINUS term

   36 term: factor
   37     | term T_MULTIPLY factor
   38     | term T_DIVIDE factor

   39 factor: primary_expression

   40 primary_expression: identifier
   41                   | T_INTEGER_LITERAL
   42                   | T_FLOAT_LITERAL
   43                   | T_STRING_LITERAL
   44                   | T_LPAREN expression T_RPAREN

   45 identifier: T_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_IDENTIFIER <sval> (258) 45
    T_INTEGER_LITERAL <ival> (259) 41
    T_FLOAT_LITERAL <fval> (260) 42
    T_STRING_LITERAL <sval> (261) 43
    T_INT (262) 14
    T_FLOAT (263) 15
    T_STRING_TYPE (264) 16
    T_IF (265) 20 21
    T_ELSE (266) 21
    T_WHILE (267) 22
    T_PRINT (268) 23
    T_READ (269) 24
    T_ASSIGN (270) 18 19
    T_PLUS (271) 34
    T_MINUS (272) 35
    T_MULTIPLY (273) 37
    T_DIVIDE (274) 38
    T_EQ (275) 27
    T_NEQ (276) 28
    T_LT (277) 29
    T_GT (278) 30
    T_LTE (279) 31
    T_GTE (280) 32
    T_LPAREN (281) 20 21 22 23 24 44
    T_RPAREN (282) 20 21 22 23 24 44
    T_LBRACE (283) 13
    T_RBRACE (284) 13
    T_SEMICOLON (285) 11 12 17 18 19 23 24
    T_ERROR (286) 12


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program <node> (33)
        on left: 1
        on right: 0
    statement_list <stmt_list_node> (34)
        on left: 2 3
        on right: 1 3 13
    statement <node> (35)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 3
    block <stmt_list_node> (36)
        on left: 13
        on right: 10 20 21 22
    type_specifier <dtype> (37)
        on left: 14 15 16
        on right: 17 18
    variable_declaration <var_decl_node> (38)
        on left: 17 18
        on right: 4
    assignment_statement <assign_node> (39)
        on left: 19
        on right: 5
    if_statement <if_node> (40)
        on left: 20 21
        on right: 6
    while_statement <while_node> (41)
        on left: 22
        on right: 7
    print_statement <print_node> (42)
        on left: 23
        on right: 8
    read_statement <read_node> (43)
        on left: 24
        on right: 9
    expression <node> (44)
        on left: 25
        on right: 18 19 20 21 22 23 44
    comparison_expression <node> (45)
        on left: 26 27 28 29 30 31 32
        on right: 25
    arithmetic_expression <node> (46)
        on left: 33 34 35
        on right: 26 27 28 29 30 31 32 34 35
    term <node> (47)
        on left: 36 37 38
        on right: 33 34 35 37 38
    factor <node> (48)
        on left: 39
        on right: 36 37 38
    primary_expression <node> (49)
        on left: 40 41 42 43 44
        on right: 39
    identifier <id_node> (50)
        on left: 45
        on right: 17 18 19 24 40


State 0

    0 $accept: • program $end
    1 program: • statement_list
    2 statement_list: ε •
    3               | • statement_list statement

    $default  reduce using rule 2 (statement_list)

    program         go to state 1
    statement_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: statement_list •  [$end]
    3 statement_list: statement_list • statement
    4 statement: • variable_declaration
    5          | • assignment_statement
    6          | • if_statement
    7          | • while_statement
    8          | • print_statement
    9          | • read_statement
   10          | • block
   11          | • T_SEMICOLON
   12          | • T_ERROR T_SEMICOLON
   13 block: • T_LBRACE statement_list T_RBRACE
   14 type_specifier: • T_INT
   15               | • T_FLOAT
   16               | • T_STRING_TYPE
   17 variable_declaration: • type_specifier identifier T_SEMICOLON
   18                     | • type_specifier identifier T_ASSIGN expression T_SEMICOLON
   19 assignment_statement: • identifier T_ASSIGN expression T_SEMICOLON
   20 if_statement: • T_IF T_LPAREN expression T_RPAREN block
   21             | • T_IF T_LPAREN expression T_RPAREN block T_ELSE block
   22 while_statement: • T_WHILE T_LPAREN expression T_RPAREN block
   23 print_statement: • T_PRINT T_LPAREN expression T_RPAREN T_SEMICOLON
   24 read_statement: • T_READ T_LPAREN identifier T_RPAREN T_SEMICOLON
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER   shift, and go to state 4
    T_INT          shift, and go to state 5
    T_FLOAT        shift, and go to state 6
    T_STRING_TYPE  shift, and go to state 7
    T_IF           shift, and go to state 8
    T_WHILE        shift, and go to state 9
    T_PRINT        shift, and go to state 10
    T_READ         shift, and go to state 11
    T_LBRACE       shift, and go to state 12
    T_SEMICOLON    shift, and go to state 13
    T_ERROR        shift, and go to state 14

    $default  reduce using rule 1 (program)

    statement             go to state 15
    block                 go to state 16
    type_specifier        go to state 17
    variable_declaration  go to state 18
    assignment_statement  go to state 19
    if_statement          go to state 20
    while_statement       go to state 21
    print_statement       go to state 22
    read_statement        go to state 23
    identifier            go to state 24


State 3

    0 $accept: program $end •

    $default  accept


State 4

   45 identifier: T_IDENTIFIER •

    $default  reduce using rule 45 (identifier)


State 5

   14 type_specifier: T_INT •

    $default  reduce using rule 14 (type_specifier)


State 6

   15 type_specifier: T_FLOAT •

    $default  reduce using rule 15 (type_specifier)


State 7

   16 type_specifier: T_STRING_TYPE •

    $default  reduce using rule 16 (type_specifier)


State 8

   20 if_statement: T_IF • T_LPAREN expression T_RPAREN block
   21             | T_IF • T_LPAREN expression T_RPAREN block T_ELSE block

    T_LPAREN  shift, and go to state 25


State 9

   22 while_statement: T_WHILE • T_LPAREN expression T_RPAREN block

    T_LPAREN  shift, and go to state 26


State 10

   23 print_statement: T_PRINT • T_LPAREN expression T_RPAREN T_SEMICOLON

    T_LPAREN  shift, and go to state 27


State 11

   24 read_statement: T_READ • T_LPAREN identifier T_RPAREN T_SEMICOLON

    T_LPAREN  shift, and go to state 28


State 12

    2 statement_list: ε •
    3               | • statement_list statement
   13 block: T_LBRACE • statement_list T_RBRACE

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 29


State 13

   11 statement: T_SEMICOLON •

    $default  reduce using rule 11 (statement)


State 14

   12 statement: T_ERROR • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 30


State 15

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 16

   10 statement: block •

    $default  reduce using rule 10 (statement)


State 17

   17 variable_declaration: type_specifier • identifier T_SEMICOLON
   18                     | type_specifier • identifier T_ASSIGN expression T_SEMICOLON
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 4

    identifier  go to state 31


State 18

    4 statement: variable_declaration •

    $default  reduce using rule 4 (statement)


State 19

    5 statement: assignment_statement •

    $default  reduce using rule 5 (statement)


State 20

    6 statement: if_statement •

    $default  reduce using rule 6 (statement)


State 21

    7 statement: while_statement •

    $default  reduce using rule 7 (statement)


State 22

    8 statement: print_statement •

    $default  reduce using rule 8 (statement)


State 23

    9 statement: read_statement •

    $default  reduce using rule 9 (statement)


State 24

   19 assignment_statement: identifier • T_ASSIGN expression T_SEMICOLON

    T_ASSIGN  shift, and go to state 32


State 25

   20 if_statement: T_IF T_LPAREN • expression T_RPAREN block
   21             | T_IF T_LPAREN • expression T_RPAREN block T_ELSE block
   25 expression: • comparison_expression
   26 comparison_expression: • arithmetic_expression
   27                      | • arithmetic_expression T_EQ arithmetic_expression
   28                      | • arithmetic_expression T_NEQ arithmetic_expression
   29                      | • arithmetic_expression T_LT arithmetic_expression
   30                      | • arithmetic_expression T_GT arithmetic_expression
   31                      | • arithmetic_expression T_LTE arithmetic_expression
   32                      | • arithmetic_expression T_GTE arithmetic_expression
   33 arithmetic_expression: • term
   34                      | • arithmetic_expression T_PLUS term
   35                      | • arithmetic_expression T_MINUS term
   36 term: • factor
   37     | • term T_MULTIPLY factor
   38     | • term T_DIVIDE factor
   39 factor: • primary_expression
   40 primary_expression: • identifier
   41                   | • T_INTEGER_LITERAL
   42                   | • T_FLOAT_LITERAL
   43                   | • T_STRING_LITERAL
   44                   | • T_LPAREN expression T_RPAREN
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 4
    T_INTEGER_LITERAL  shift, and go to state 33
    T_FLOAT_LITERAL    shift, and go to state 34
    T_STRING_LITERAL   shift, and go to state 35
    T_LPAREN           shift, and go to state 36

    expression             go to state 37
    comparison_expression  go to state 38
    arithmetic_expression  go to state 39
    term                   go to state 40
    factor                 go to state 41
    primary_expression     go to state 42
    identifier             go to state 43


State 26

   22 while_statement: T_WHILE T_LPAREN • expression T_RPAREN block
   25 expression: • comparison_expression
   26 comparison_expression: • arithmetic_expression
   27                      | • arithmetic_expression T_EQ arithmetic_expression
   28                      | • arithmetic_expression T_NEQ arithmetic_expression
   29                      | • arithmetic_expression T_LT arithmetic_expression
   30                      | • arithmetic_expression T_GT arithmetic_expression
   31                      | • arithmetic_expression T_LTE arithmetic_expression
   32                      | • arithmetic_expression T_GTE arithmetic_expression
   33 arithmetic_expression: • term
   34                      | • arithmetic_expression T_PLUS term
   35                      | • arithmetic_expression T_MINUS term
   36 term: • factor
   37     | • term T_MULTIPLY factor
   38     | • term T_DIVIDE factor
   39 factor: • primary_expression
   40 primary_expression: • identifier
   41                   | • T_INTEGER_LITERAL
   42                   | • T_FLOAT_LITERAL
   43                   | • T_STRING_LITERAL
   44                   | • T_LPAREN expression T_RPAREN
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 4
    T_INTEGER_LITERAL  shift, and go to state 33
    T_FLOAT_LITERAL    shift, and go to state 34
    T_STRING_LITERAL   shift, and go to state 35
    T_LPAREN           shift, and go to state 36

    expression             go to state 44
    comparison_expression  go to state 38
    arithmetic_expression  go to state 39
    term                   go to state 40
    factor                 go to state 41
    primary_expression     go to state 42
    identifier             go to state 43


State 27

   23 print_statement: T_PRINT T_LPAREN • expression T_RPAREN T_SEMICOLON
   25 expression: • comparison_expression
   26 comparison_expression: • arithmetic_expression
   27                      | • arithmetic_expression T_EQ arithmetic_expression
   28                      | • arithmetic_expression T_NEQ arithmetic_expression
   29                      | • arithmetic_expression T_LT arithmetic_expression
   30                      | • arithmetic_expression T_GT arithmetic_expression
   31                      | • arithmetic_expression T_LTE arithmetic_expression
   32                      | • arithmetic_expression T_GTE arithmetic_expression
   33 arithmetic_expression: • term
   34                      | • arithmetic_expression T_PLUS term
   35                      | • arithmetic_expression T_MINUS term
   36 term: • factor
   37     | • term T_MULTIPLY factor
   38     | • term T_DIVIDE factor
   39 factor: • primary_expression
   40 primary_expression: • identifier
   41                   | • T_INTEGER_LITERAL
   42                   | • T_FLOAT_LITERAL
   43                   | • T_STRING_LITERAL
   44                   | • T_LPAREN expression T_RPAREN
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 4
    T_INTEGER_LITERAL  shift, and go to state 33
    T_FLOAT_LITERAL    shift, and go to state 34
    T_STRING_LITERAL   shift, and go to state 35
    T_LPAREN           shift, and go to state 36

    expression             go to state 45
    comparison_expression  go to state 38
    arithmetic_expression  go to state 39
    term                   go to state 40
    factor                 go to state 41
    primary_expression     go to state 42
    identifier             go to state 43


State 28

   24 read_statement: T_READ T_LPAREN • identifier T_RPAREN T_SEMICOLON
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 4

    identifier  go to state 46


State 29

    3 statement_list: statement_list • statement
    4 statement: • variable_declaration
    5          | • assignment_statement
    6          | • if_statement
    7          | • while_statement
    8          | • print_statement
    9          | • read_statement
   10          | • block
   11          | • T_SEMICOLON
   12          | • T_ERROR T_SEMICOLON
   13 block: • T_LBRACE statement_list T_RBRACE
   13      | T_LBRACE statement_list • T_RBRACE
   14 type_specifier: • T_INT
   15               | • T_FLOAT
   16               | • T_STRING_TYPE
   17 variable_declaration: • type_specifier identifier T_SEMICOLON
   18                     | • type_specifier identifier T_ASSIGN expression T_SEMICOLON
   19 assignment_statement: • identifier T_ASSIGN expression T_SEMICOLON
   20 if_statement: • T_IF T_LPAREN expression T_RPAREN block
   21             | • T_IF T_LPAREN expression T_RPAREN block T_ELSE block
   22 while_statement: • T_WHILE T_LPAREN expression T_RPAREN block
   23 print_statement: • T_PRINT T_LPAREN expression T_RPAREN T_SEMICOLON
   24 read_statement: • T_READ T_LPAREN identifier T_RPAREN T_SEMICOLON
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER   shift, and go to state 4
    T_INT          shift, and go to state 5
    T_FLOAT        shift, and go to state 6
    T_STRING_TYPE  shift, and go to state 7
    T_IF           shift, and go to state 8
    T_WHILE        shift, and go to state 9
    T_PRINT        shift, and go to state 10
    T_READ         shift, and go to state 11
    T_LBRACE       shift, and go to state 12
    T_RBRACE       shift, and go to state 47
    T_SEMICOLON    shift, and go to state 13
    T_ERROR        shift, and go to state 14

    statement             go to state 15
    block                 go to state 16
    type_specifier        go to state 17
    variable_declaration  go to state 18
    assignment_statement  go to state 19
    if_statement          go to state 20
    while_statement       go to state 21
    print_statement       go to state 22
    read_statement        go to state 23
    identifier            go to state 24


State 30

   12 statement: T_ERROR T_SEMICOLON •

    $default  reduce using rule 12 (statement)


State 31

   17 variable_declaration: type_specifier identifier • T_SEMICOLON
   18                     | type_specifier identifier • T_ASSIGN expression T_SEMICOLON

    T_ASSIGN     shift, and go to state 48
    T_SEMICOLON  shift, and go to state 49


State 32

   19 assignment_statement: identifier T_ASSIGN • expression T_SEMICOLON
   25 expression: • comparison_expression
   26 comparison_expression: • arithmetic_expression
   27                      | • arithmetic_expression T_EQ arithmetic_expression
   28                      | • arithmetic_expression T_NEQ arithmetic_expression
   29                      | • arithmetic_expression T_LT arithmetic_expression
   30                      | • arithmetic_expression T_GT arithmetic_expression
   31                      | • arithmetic_expression T_LTE arithmetic_expression
   32                      | • arithmetic_expression T_GTE arithmetic_expression
   33 arithmetic_expression: • term
   34                      | • arithmetic_expression T_PLUS term
   35                      | • arithmetic_expression T_MINUS term
   36 term: • factor
   37     | • term T_MULTIPLY factor
   38     | • term T_DIVIDE factor
   39 factor: • primary_expression
   40 primary_expression: • identifier
   41                   | • T_INTEGER_LITERAL
   42                   | • T_FLOAT_LITERAL
   43                   | • T_STRING_LITERAL
   44                   | • T_LPAREN expression T_RPAREN
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 4
    T_INTEGER_LITERAL  shift, and go to state 33
    T_FLOAT_LITERAL    shift, and go to state 34
    T_STRING_LITERAL   shift, and go to state 35
    T_LPAREN           shift, and go to state 36

    expression             go to state 50
    comparison_expression  go to state 38
    arithmetic_expression  go to state 39
    term                   go to state 40
    factor                 go to state 41
    primary_expression     go to state 42
    identifier             go to state 43


State 33

   41 primary_expression: T_INTEGER_LITERAL •

    $default  reduce using rule 41 (primary_expression)


State 34

   42 primary_expression: T_FLOAT_LITERAL •

    $default  reduce using rule 42 (primary_expression)


State 35

   43 primary_expression: T_STRING_LITERAL •

    $default  reduce using rule 43 (primary_expression)


State 36

   25 expression: • comparison_expression
   26 comparison_expression: • arithmetic_expression
   27                      | • arithmetic_expression T_EQ arithmetic_expression
   28                      | • arithmetic_expression T_NEQ arithmetic_expression
   29                      | • arithmetic_expression T_LT arithmetic_expression
   30                      | • arithmetic_expression T_GT arithmetic_expression
   31                      | • arithmetic_expression T_LTE arithmetic_expression
   32                      | • arithmetic_expression T_GTE arithmetic_expression
   33 arithmetic_expression: • term
   34                      | • arithmetic_expression T_PLUS term
   35                      | • arithmetic_expression T_MINUS term
   36 term: • factor
   37     | • term T_MULTIPLY factor
   38     | • term T_DIVIDE factor
   39 factor: • primary_expression
   40 primary_expression: • identifier
   41                   | • T_INTEGER_LITERAL
   42                   | • T_FLOAT_LITERAL
   43                   | • T_STRING_LITERAL
   44                   | • T_LPAREN expression T_RPAREN
   44                   | T_LPAREN • expression T_RPAREN
   45 identifier: • T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 4
    T_INTEGER_LITERAL  shift, and go to state 33
    T_FLOAT_LITERAL    shift, and go to state 34
    T_STRING_LITERAL   shift, and go to state 35
    T_LPAREN           shift, and go to state 36

    expression             go to state 51
    comparison_expression  go to state 38
    arithmetic_expression  go to state 39
    term                   go to state 40
    factor                 go to state 41
    primary_expression     go to state 42
    identifier             go to state 43


State 37

   20 if_statement: T_IF T_LPAREN expression • T_RPAREN block
   21             | T_IF T_LPAREN expression • T_RPAREN block T_ELSE block

    T_RPAREN  shift, and go to state 52


State 38

   25 expression: comparison_expression •

    $default  reduce using rule 25 (expression)


State 39

   26 comparison_expression: arithmetic_expression •  [T_RPAREN, T_SEMICOLON]
   27                      | arithmetic_expression • T_EQ arithmetic_expression
   28                      | arithmetic_expression • T_NEQ arithmetic_expression
   29                      | arithmetic_expression • T_LT arithmetic_expression
   30                      | arithmetic_expression • T_GT arithmetic_expression
   31                      | arithmetic_expression • T_LTE arithmetic_expression
   32                      | arithmetic_expression • T_GTE arithmetic_expression
   34 arithmetic_expression: arithmetic_expression • T_PLUS term
   35                      | arithmetic_expression • T_MINUS term

    T_PLUS   shift, and go to state 53
    T_MINUS  shift, and go to state 54
    T_EQ     shift, and go to state 55
    T_NEQ    shift, and go to state 56
    T_LT     shift, and go to state 57
    T_GT     shift, and go to state 58
    T_LTE    shift, and go to state 59
    T_GTE    shift, and go to state 60

    $default  reduce using rule 26 (comparison_expression)


State 40

   33 arithmetic_expression: term •  [T_PLUS, T_MINUS, T_EQ, T_NEQ, T_LT, T_GT, T_LTE, T_GTE, T_RPAREN, T_SEMICOLON]
   37 term: term • T_MULTIPLY factor
   38     | term • T_DIVIDE factor

    T_MULTIPLY  shift, and go to state 61
    T_DIVIDE    shift, and go to state 62

    $default  reduce using rule 33 (arithmetic_expression)


State 41

   36 term: factor •

    $default  reduce using rule 36 (term)


State 42

   39 factor: primary_expression •

    $default  reduce using rule 39 (factor)


State 43

   40 primary_expression: identifier •

    $default  reduce using rule 40 (primary_expression)


State 44

   22 while_statement: T_WHILE T_LPAREN expression • T_RPAREN block

    T_RPAREN  shift, and go to state 63


State 45

   23 print_statement: T_PRINT T_LPAREN expression • T_RPAREN T_SEMICOLON

    T_RPAREN  shift, and go to state 64


State 46

   24 read_statement: T_READ T_LPAREN identifier • T_RPAREN T_SEMICOLON

    T_RPAREN  shift, and go to state 65


State 47

   13 block: T_LBRACE statement_list T_RBRACE •

    $default  reduce using rule 13 (block)


State 48
